import React from 'react';
import NoDataView from '../../src/NoDataView';

const defaultVariety = <NoDataView />;

// Snapshot Tests
it('should render a default component', () => {
  const wrapper = shallow(defaultVariety);
  expect(wrapper).toMatchSnapshot();
});


// Prop Tests
it('should have the class terraClinical-NoDataView', () => {
  const wrapper = shallow(defaultVariety);
  expect(wrapper.prop('className')).toContain('terraClinical-NoDataView');
});

it('should render a heading', () => {
  const noDataView = <NoDataView heading="test heading" />;
  const wrapper = shallow(noDataView);
  expect(wrapper).toMatchSnapshot();
});

it('should render a subtext', () => {
  const noDataView = <NoDataView subtext="test subtext." />;
  const wrapper = shallow(noDataView);
  expect(wrapper).toMatchSnapshot();
});

it('should render a with subtext content', () => {
  const noDataView = <NoDataView subtextContent={<p>test subtextContent</p>} />;
  const wrapper = shallow(noDataView);
  expect(wrapper).toMatchSnapshot();
});

it('should not render a glyph', () => {
  const noDataView = <NoDataView isGlyphHidden />;
  const wrapper = shallow(noDataView);
  expect(wrapper).toMatchSnapshot();
});
